page2 video section

--- a/Ques.css
+++ b/Ques.css
@@ -148,23 +148,26 @@
   line-height: 7vw;
  }
 
- #hero h2,h3{
+ #hero h2{
   font-weight: 500;
   font-size: 6vw;
   text-transform: uppercase;
   line-height: 7vw;
+ border-bottom: 0.4vw solid #fff;  
+ transition: all ease 0.3;
  }
 
  #hero h2:hover{
   -webkit-text-stroke: 2px #fff;
   font-weight: 500;
   color: transparent;
+  border-bottom: 0.4vw solid #ffffff00; 
  }
 
  #page1{
   height: 100vh;
   width: 100%;
-  background-color:#110f0f;
+  background-color:#191616;
  }
 
  #page1 #nav{
@@ -174,5 +177,37 @@
   padding: 2.4vw 5.4vw;
  }
 
+
+ /* page2 starts */
+
+ #page2 {
+  width: 100%;
+  height: 100vh;
+  background-color:#191616;
+  position: relative;
+ }
+
+ #video-container {
+  width: 70vw;
+  height: 63vh;
+  position: relative;
+  left: 30%;
+  /* background-image: url(https://obys.agency/wp-content/uploads/2022/11/Showreel-2022-preview-1.jpg); */
+ }
+
+ #video-container video{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+ }
+
+ #video-container img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+
+ }
 
  
