--- a/Ques.css
+++ b/Ques.css
@@ -1,127 +1,132 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anuphan:wght@300;400&family=Corben:wght@400;700&family=Courgette&family=Dosis:wght@200;300;400;500;600;700&family=Inter:wght@200;300;400;500;700;800&family=Itim&family=Jost:wght@200;300;400;500&family=Kanit:wght@200;300;400&family=Kaushan+Script&family=Khula:wght@300;400;600;700&family=Montserrat:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Mulish:wght@200;300;400;500&family=Nunito:wght@300;500;600;700;800&family=Open+Sans:wght@300;400;500;600&family=Outfit:wght@100;200;300;400;500;600&family=Patrick+Hand&family=Patua+One&family=Poppins:ital,wght@0,100;0,400;0,600;1,100;1,300;1,500&family=Prata&family=Rajdhani:wght@300;400;600;700&family=Raleway:wght@300;400;500&family=Roboto+Slab:wght@400;800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Russo+One&family=Ubuntu:wght@300;400;500;700&family=Victor+Mono:wght@100;200;300;400;600;700&display=swap');
 
- 
- 
- *{
-    margin: 0;
-    padding: 0;
-    font-family:"Plain Light";
-    color: #fff;
-    box-sizing: border-box;
- }
 
- html,body{
-    width: 100%;
-    height: 100%;
- }
 
- #loader{
-   height: 100%;
-   width: 100%;
-   position: fixed;
-   z-index: 999;
-   background-color: #0b0b0b;
-   padding: 25vh 10vw;
- }
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Plain Light";
+  color: #fff;
+  box-sizing: border-box;
+}
 
- .line h1{
-   font-size: 6.5vw;
-   text-transform: uppercase;
-   font-weight: 400;
- }
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
 
- .line h2{
-   font-size: 5vw;
-   text-transform: uppercase;
-   font-weight: 400;
-   animation: nowanime;
-   animation-duration: 2s;
-   animation-iteration-count: infinite;
-   
- }
+body {
+  overflow-x: hidden;
+}
 
- @keyframes nowanime {
-  0%{
+#loader {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: 999;
+  background-color: #0b0b0b;
+  padding: 25vh 10vw;
+}
+
+.line h1 {
+  font-size: 6.5vw;
+  text-transform: uppercase;
+  font-weight: 400;
+}
+
+.line h2 {
+  font-size: 5vw;
+  text-transform: uppercase;
+  font-weight: 400;
+  animation: nowanime;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+
+}
+
+@keyframes nowanime {
+  0% {
     font-family: "Plain Light";
     -webkit-text-stroke: 1px #fff;
     color: #fff;
     font-weight: 500;
-    
+
   }
 
-  47%{
+  47% {
     font-family: "silk serif";
     -webkit-text-stroke: 1px #fff;
     color: transparent;
     font-weight: 500;
   }
 
-  50%{
+  50% {
     font-family: "Plain Light";
     -webkit-text-stroke: 1px #fff;
     color: #fff;
     font-weight: 500;
   }
 
-  100%{
+  100% {
     font-family: "silk serif";
     -webkit-text-stroke: 1px #fff;
-     color: transparent; 
-     font-weight: 500;
+    color: transparent;
+    font-weight: 500;
   }
 }
 
- .line{
-   height: fit-content;
-   overflow: hidden;
-   display: flex;
-   align-items: center;
-   justify-content: flex-start;
-   gap: 2vw;
- }
+.line {
+  height: fit-content;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 2vw;
+}
 
- 
- #line1-part1 h5{
-   /* background-color: red; */
-   width: 4vw;
- }
 
- #line1-part1{
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   gap: 2.5vw;
+#line1-part1 h5 {
+  /* background-color: red; */
+  width: 4vw;
+}
 
- }
+#line1-part1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2.5vw;
+}
 
- #line1-part1 h5,h6{
-   font-size: 4vw;
-   font-family: "silk serif";
-   font-weight: 100;
- }
+#line1-part1 h5,
+h6 {
+  font-size: 4vw;
+  font-family: "silk serif";
+  font-weight: 100;
+}
 
- 
- #main{
-  position: relative; 
+
+#main {
+  position: relative;
   width: 100%;
   height: 100%;
   background-color: #111;
- }
+}
 
- #nav-part2 {
+#nav-part2 {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 2.8vw;
- }
+}
 
- #hero:nth-child(2){
+#hero:nth-child(2) {
   margin-top: 18vh;
- 
- }
+
+}
+
 /* cursor css */
-#cursor{
+#cursor {
   width: 2.5vw;
   height: 2.5vw;
   position: fixed;
@@ -129,85 +134,239 @@
   border: 1px solid #fff;
   border-radius: 50%;
   mix-blend-mode: color-dodge;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   z-index: 999;
 }
+
 /* cursor css */
- #hero{
+#hero {
   width: 70%;
   overflow: hidden;
   margin-left: 30%;
   display: flex;
   align-items: center;
- }
+}
 
- #hero h1{
+#hero h1 {
   font-weight: 500;
   font-size: 6vw;
   text-transform: uppercase;
   line-height: 7vw;
- }
+}
 
- #hero h2{
+#hero h2 {
   font-weight: 500;
   font-size: 6vw;
   text-transform: uppercase;
   line-height: 7vw;
- border-bottom: 0.4vw solid #fff;  
- transition: all ease 0.3;
- }
+  border-bottom: 0.4vw solid #fff;
+  transition: all ease 0.3;
+}
 
- #hero h2:hover{
+#hero h2:hover {
   -webkit-text-stroke: 2px #fff;
   font-weight: 500;
   color: transparent;
-  border-bottom: 0.4vw solid #ffffff00; 
- }
+  border-bottom: 0.4vw solid #ffffff00;
+}
 
- #page1{
+#page1 {
   height: 100vh;
   width: 100%;
-  background-color:#191616;
- }
+  background-color: #191616;
+}
 
- #page1 #nav{
+#page1 #nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 2.4vw 5.4vw;
- }
+}
 
 
- /* page2 starts */
+/* page2 starts */
 
- #page2 {
+#page2 {
   width: 100%;
   height: 100vh;
-  background-color:#191616;
+  background-color: #191616;
   position: relative;
- }
+}
 
- #video-container {
+#video-container {
   width: 70vw;
   height: 63vh;
   position: relative;
   left: 30%;
   /* background-image: url(https://obys.agency/wp-content/uploads/2022/11/Showreel-2022-preview-1.jpg); */
- }
+}
 
- #video-container video{
+#video-container video {
   width: 100%;
   height: 100%;
   object-fit: cover;
- }
+}
 
- #video-container img{
+#video-container img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   position: absolute;
-  top: 0;
+}
 
- }
+#video-container #video-cursor {
+  width: 8vw;
+  height: 8vw;
+  background-color: #ffa63d;
+  border-radius: 50%;
+  position: absolute;
+  top: -10%;
+  left: 80%;
+  z-index: 999 !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
- 
+#video-cursor i {
+  font-size: 2vw;
+}
+
+/* page4 starts */
+#page4 {
+  width: 100%;
+  min-height: 100vh;
+  background-color: #191616;
+}
+
+#page4-content {
+  width: 70%;
+  margin-left: 29%;
+}
+
+#page4-content h1 {
+  font-size: 6.2vw;
+  text-transform: uppercase;
+}
+
+#page4-content .underline {
+  height: 1.4px;
+  width: 100%;
+  margin: 2vw 0;
+  background-color: #fff;
+}
+
+#page4-content>p {
+  font-size: 1.7vw;
+  width: 50%;
+  margin: 2vw 0;
+}
+
+.flex4 {
+  display: flex;
+}
+
+.flex4 img {
+  width: 43%;
+}
+
+.flex4 p {
+  margin-left: 2vw;
+  width: 33%;
+}
+
+#blue-div {
+  width: 37vw;
+  background-color: #3f7df4;
+  padding: 2vw;
+  position: relative;
+  top: -15vw;
+  left: 15vw;
+}
+
+.underline2 {
+  height: 1.4px;
+  width: 100%;
+  background-color: #fff;
+  margin-top: -10vw;
+}
+
+#blue-elem {
+  display: flex;
+  align-items: flex-start;
+  padding: 2vw 0;
+  border-bottom: 1px solid #fff;
+  justify-content: space-between;
+}
+
+#blue-elem h4 {
+  font-size: 1.4vw;
+}
+
+#blue-elem p {
+  width: 50%;
+}
+
+
+#page5 {
+  width: 100%;
+  min-height: 100vh;
+  background-color: #191616;
+  padding: 3vw 0;
+}
+#page5 #elem{
+  white-space: nowrap;
+  /* overflow-x: auto; */
+}
+#page5 #elem h1 {
+  font-size: 6vw;
+  -webkit-text-stroke: 1px #fff;
+  color: transparent;
+  font-weight: 400;
+  display: inline-block !important;
+  text-transform: uppercase;
+  margin-right: 16px;
+  animation-name: run;
+  animation-iteration-count: infinite;
+  animation-duration: 13s;
+  animation-timing-function: linear;
+  /* background-color: red; */
+}
+
+
+@keyframes run {
+  from{
+    transform: translate(0);
+  }
+  to{
+    transform: translate(calc(-100% - 20px));
+  }
+}
+
+#page5 #elem2{
+  white-space: nowrap;
+  /* overflow-x: auto; */
+}
+#page5 #elem2 h1 {
+  font-size: 6vw;
+  -webkit-text-stroke: 1px #fff;
+  color: transparent;
+  font-weight: 400;
+  display: inline-block !important;
+  text-transform: uppercase;
+  margin-right: 16px;
+  animation-name: run2;
+  animation-iteration-count: infinite;
+  animation-duration: 13s;
+  animation-timing-function: linear;
+}
+
+
+@keyframes run2 {
+  to{
+    transform: translate(0);
+  }
+  from{
+    transform: translate(calc(-100% - 20px));
+  }
+}
