--- a/Ques.css
+++ b/Ques.css
@@ -21,11 +21,31 @@ body {
   overflow-x: hidden;
 }
 
+.mousefollower{
+  border: 2px solid #fff;
+  /* background: transparent; */
+  scale: 2;
+  mix-blend-mode: difference;
+}
+
+/* cursor css */
+.mousefollower {
+  width: 2vw !important;
+  height: 2vw;
+  position: fixed;
+  background: #222121;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  /* mix-blend-mode: color-dodge; */
+  transform: translate(-50%, -50%);
+  z-index: 999;
+}
+
 #loader {
   height: 100%;
   width: 100%;
   position: fixed;
-  z-index: 999;
+  z-index: 99999 !important;
   background-color: #0b0b0b;
   padding: 25vh 10vw;
 }
@@ -132,20 +152,9 @@ body {
 
 
 
-/* cursor css */
-#cursor {
-  width: 2.5vw;
-  height: 2.5vw;
-  position: fixed;
-  background: #222121;
-  border: 1px solid #fff;
-  border-radius: 50%;
-  mix-blend-mode: color-dodge;
-  transform: translate(-50%, -50%);
-  z-index: 999;
-}
 
-/* cursor css */
+
+/* home css */
 .hero {
   width: 70%;
   overflow: hidden;
@@ -206,7 +215,8 @@ body {
   height: 63vh;
   position: relative;
   left: 30%;
-  /* background-image: url(https://obys.agency/wp-content/uploads/2022/11/Showreel-2022-preview-1.jpg); */
+  background-image: url("https://obys.agency/wp-content/uploads/2022/11/Showreel-2022-preview-1.jpg");
+  background-size: cover;
 }
 
 #video-container video {
@@ -221,6 +231,8 @@ body {
   object-fit: cover;
   position: absolute;
 }
+
+ 
 
 #video-container #video-cursor {
   width: 8vw;
@@ -251,21 +263,59 @@ body {
   width: 70%;
   margin-left: 29%;
 }
-.page3-circle{
+
+.page3-circle1 {
   width: 20vw;
   height: 20vw;
   border: 2px solid #fff;
   border-radius: 50%;
   display: flex;
+  position: relative;
   align-items: center;
   justify-content: center;
 
 }
 
-.page3-circle svg{
+.page3-circle1 svg {
   height: 40%;
+}
+
+.circle-in {
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  scale: 0;
+}
+
+ 
+ 
+ 
+
+ 
+.page3-circle2 {
+  width: 20vw;
+  height: 20vw;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
 
 }
+
+.page3-circle2 svg {
+  height: 40%;
+  rotate: -45deg;
+}
+
 
 #page3-content h1 {
   font-size: 6.2vw;
@@ -296,29 +346,32 @@ body {
   padding: 1vw;
   display: flex;
   align-items: flex-end;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
-
   /* background-color: red; */
 }
 
 .image-div {
-  height: 33vw;
-  width: 23vw;
+  height: 38vw;
+  width: 27 vw;
   position: relative;
   overflow: hidden;
   margin: 2vw 3vw;
   flex-shrink: 0;
-
   /* background-color: blue; */
 }
 
-.image-div img{
+.image-div:nth-child(1) {
+  height: 29vw;
+  width: 22vw;
+}
+
+.image-div img {
   width: 100%;
   object-fit: cover;
   background-position: center;
   height: 100%;
-  
+
 }
 
 /* page4 starts */
@@ -411,7 +464,7 @@ body {
 
 #page5 {
   width: 100%;
-  min-height: 100vh;
+  min-height: 76vh;
   background-color: #191616;
   padding: 3vw 0;
 }
@@ -554,7 +607,33 @@ body {
 
 
 
-._canvas_container{
+._canvas_container {
   z-index: 9999 !important;
   pointer-events: none;
+}
+
+/* flag */
+
+#flag {
+  height: 25vw;
+  position: absolute;
+  top: 0;
+  opacity: 0;
+  left: 0;
+  transform: translatex(-50%,-50%);
+}
+
+#hero3{
+  position: relative;
+  z-index: 999;
+
+}
+
+
+
+
+/* media query starts */
+
+@media(max-width:768px){
+ 
 }
